--- a/ListaDesejo/res/layout/activity_main_activity2.xml
+++ b/ListaDesejo/res/layout/activity_main_activity2.xml
@@ -7,28 +7,8 @@
     <ListView 
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight=".9">
+        android:layout_height="match_parent">
         
     </ListView>
-    
-    <LinearLayout 
-        android:id="@+id/listview_botoes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight=".1"
-        android:orientation="horizontal">
-	    <Button
-	        android:id="@+id/button"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-        	android:text="@string/novo" />
-
-	    <Button
-	        android:id="@+id/recarregar"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-        	android:text="@string/recarregar" />
-    </LinearLayout>
 
 </LinearLayout>
